--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -7,4 +7,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: my-step
-        run: ci/build-app.sh 
+      - run: ci/build-app.sh
+      - name: Test
+      - run: ci/unit-test-app.sh 
