--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -6,7 +6,7 @@ jobs:
     container: gradle:6-jdk11
     steps:
       - uses: actions/checkout@v2
-      - name: my-step
+        name: my-step
       - run: ci/build-app.sh
       - name: Test
-      - run: ci/unit-test-app.sh 
+        run: ci/unit-test-app.sh 
