--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -1,15 +1,26 @@
-name: hello-world
+name: Java CI
 on: push
 jobs:
-  my-job:
+  Clone-down:
     runs-on: ubuntu-latest
     container: gradle:6-jdk11
     steps:
       - uses: actions/checkout@v2
         name: Build
-      - run: ci/build-app.sh
+  Test:
+    runs-on: ubuntu-latest
+    container: gradle:6-jdk11
+    needs: Clone-down
+    steps:
       - name: Test
-        run: ci/unit-test-app.sh 
+        run: ci/unit-test-app.sh
+  Build:
+    runs-on: ubuntu-latest
+    container: gradle:6-jdk11
+    needs: Clone-down
+    steps:
+      - name: Build code
+        run: ci/build-app.sh
       - name: Upload Repo
         uses: actions/upload-artifact@v2
         with:
