--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -23,7 +23,7 @@ jobs:
           name: code
           path: .
       - name: Test
-        run: ci/unit-test-app.sh
+        run: chmod +x ci/unit-test-app.sh
   Build:
     runs-on: ubuntu-latest
     container: gradle:6-jdk11
@@ -35,4 +35,4 @@ jobs:
           name: code
           path: .
       - name: Build code
-        run: ci/build-app.sh
+        run: chmod +x ci/build-app.sh
