--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -36,3 +36,33 @@ jobs:
           path: .
       - name: Build code
         run: chmod +x ci/build-app.sh
+      - name: Upload Build Code
+        uses: actions/upload-artifact@v2
+        with:
+          name: build-code
+          path: .
+  Docker-image:
+    runs-on: ubuntu-latest
+    container: gradle:6-jdk11
+    needs:
+      - Build
+      - Test
+    steps:
+      - name: Download Build Code
+        uses: actions/download-artifact@v2
+          with:
+            name: build-code
+            path: .
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ env.docker_username }}
+          password: ${{ env.docker_password }}
+      - name: Build Docker image
+        run: chmod +x ci/build-docker.sh
+        with:
+          export: GIT_COMMIT="GA-$GITHUB_SHA"
+      - name: Push Docker image
+        run: chmod +x ci/push-docker.sh
+    
+    
