--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -45,8 +45,8 @@ jobs:
     runs-on: ubuntu-latest
     container: gradle:6-jdk11
     env:
-      docker_username: miki2670
-      docker_password: 39097f8e-5576-41f3-8037-ad7431c0e39e
+      docker_username: SECRETS_DOCKER_USERNAME
+      docker_password: SECRETS_DOCKER_PASSWORD
     needs:
       - Build
       - Test
@@ -56,14 +56,9 @@ jobs:
         with:
           name: build-code
           path: .
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ env.docker_username }}
-          password: ${{ env.docker_password }}
       - name: Build Docker image
-        run: ci/build-docker.sh
+        run: chmod +x ci/build-docker.sh && export GIT_COMMIT="GA-$GITHUB_SHA
       - name: Push Docker image
-        run: ci/push-docker.sh
+        run: chmod +x ci/push-docker.sh && export GIT_COMMIT="GA-$GITHUB_SHA
     
     
