--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -57,8 +57,16 @@ jobs:
           name: build-code
           path: .
       - name: Build Docker image
-        run: chmod +x ci/build-docker.sh && export GIT_COMMIT="GA-$GITHUB_SHA
+        run: chmod +x ci/build-docker.sh && export GIT_COMMIT="GA-$GITHUB_SHA"
       - name: Push Docker image
-        run: chmod +x ci/push-docker.sh && export GIT_COMMIT="GA-$GITHUB_SHA
+        run: chmod +x ci/push-docker.sh && export GIT_COMMIT="GA-$GITHUB_SHA"
+  Component-test:
+    runs-on: ubuntu-latest
+    container: gradle:6-jdk11
+    env:
+      docker_username: SECRETS_DOCKER_USERNAME
+      docker_password: SECRETS_DOCKER_PASSWORD
+    needs: Docker-image
+
     
     
