--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -57,9 +57,13 @@ jobs:
           name: build-code
           path: .
       - name: Build Docker image
-        run: chmod +x ci/build-docker.sh && export GIT_COMMIT="GA-$GITHUB_SHA" && ci/build-docker.sh
+        run: chmod +x ci/build-docker.sh 
+        run: export GIT_COMMIT="GA-$GITHUB_SHA" 
+        run: ci/build-docker.sh
       - name: Push Docker image
-        run: chmod +x ci/push-docker.sh && export GIT_COMMIT="GA-$GITHUB_SHA" && ci/build-docker.sh
+        run: chmod +x ci/push-docker.sh 
+        run: export GIT_COMMIT="GA-$GITHUB_SHA" 
+        run: ci/push-docker.sh
   Component-test:
     runs-on: ubuntu-latest
     container: gradle:6-jdk11
