--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -1,73 +1,73 @@
 name: Java CI
 on: push
-env:
+env: # Set the secret as an input
   docker_username: ${{ secrets.DOCKER_USERNAME }}
   docker_password: ${{ secrets.DOCKER_PASSWORD }}
 jobs:
   Clone-down:
+    name: Clone down repo
     runs-on: ubuntu-latest
     container: gradle:6-jdk11
     steps:
-      - uses: actions/checkout@v2
-        name: Build
-      - name: Upload Repo
-        uses: actions/upload-artifact@v2
-        with:
-          name: code
-          path: .
+    - uses: actions/checkout@v2
+    - name: Upload Repo
+      uses: actions/upload-artifact@v2
+      with:
+        name: code
+        path: .
   Test:
     runs-on: ubuntu-latest
-    container: gradle:6-jdk11
     needs: Clone-down
+    container: gradle:6-jdk11
     steps:
-      - name: Download Repo
-        uses: actions/download-artifact@v1
-        with:
-          name: code
-          path: .
-      - name: Test
-        run: chmod +x ci/unit-test-app.sh
+    - name: Download code
+      uses: actions/download-artifact@v2
+      with:
+        name: code
+        path: . 
+    - name: Test with Gradle
+      run: chmod +x ci/unit-test-app.sh && ci/unit-test-app.sh
   Build:
     runs-on: ubuntu-latest
-    container: gradle:6-jdk11
     needs: Clone-down
+    container: gradle:6-jdk11
     steps:
-      - name: Download Repo
-        uses: actions/download-artifact@v1
-        with:
-          name: code
-          path: .
-      - name: Build code
-        run: chmod +x ci/build-app.sh
-      - name: Upload Build Code
-        uses: actions/upload-artifact@v2
-        with:
-          name: code
-          path: .
+    - name: Download code
+      uses: actions/download-artifact@v2
+      with:
+        name: code
+        path: .
+    - name: Build with Gradle
+      run: chmod +x ci/build-app.sh && ci/build-app.sh
+    - name: Upload Repo
+      uses: actions/upload-artifact@v2
+      with:
+        name: code
+        path: .
   Docker-image:
     runs-on: ubuntu-latest
     needs: [Build,Test]
     steps:
-      - name: Download Build Code
-        uses: actions/download-artifact@v1
-        with:
-          name: code
-          path: .
-      - name: Build Docker image
-        run: chmod +x ci/build-docker.sh && export GIT_COMMIT="GA-$GITHUB_SHA" && ci/build-docker.sh
-      - name: Push Docker image
-        run: chmod +x ci/push-docker.sh && export GIT_COMMIT="GA-$GITHUB_SHA" && ci/push-docker.sh
+    - name: Download code
+      uses: actions/download-artifact@v1
+      with:
+        name: code
+        path: .
+    - name: build docker
+      run: chmod +x ci/build-docker.sh && export GIT_COMMIT="GA-$GITHUB_SHA" && ci/build-docker.sh
+    - name: push docker
+      run: chmod +x ci/push-docker.sh && export GIT_COMMIT="GA-$GITHUB_SHA" && ci/push-docker.sh
   Component-test:
     runs-on: self-hosted
     needs: Docker-image
     steps:
-      - name: Download code
-        uses: actions/download-artifact@v1
-        with:
-          name: code
-          path: .
-      - name: Component test
-        run: chmod +x ci/component-test.sh && export GIT_COMMIT="GA-$GITHUB_SHA" && ci/component-test.sh
+    - name: Download code
+      uses: actions/download-artifact@v1
+      with:
+        name: code
+        path: .
+    - name: Component test
+      run: chmod +x ci/component-test.sh && export GIT_COMMIT="GA-$GITHUB_SHA" && ci/component-test.sh
 
     
     
